--- a/rdb-mysql/2.日志系统.md
+++ b/rdb-mysql/2.日志系统.md
@@ -48,26 +48,18 @@ MySQL 整体来看，其实就有两块：一块是 Server 层，它主要做的
 
 **为什么会有两份日志呢？**
 
-因为最开始 MSL 里并没有 NNODB 引擎。MYSQL 自带的引擎是 MSAM，但是MyISAM 没有 crash-safe 的能力，binlog 日志只能用于归档。而 INNODB 是另一个公司以插件形式引入 MSQL 的，既然只依靠 binlog 是没有 crash-safe 能力的，所以 INNODB 使用另外一套日志系统一也就是 redo log 来实现 crash-safe 能力。
+因为最开始 MYSQL 里并没有 INNODB 引擎。MYSQL 自带的引擎是 MSAM，但是MyISAM 没有 crash-safe 的能力，binlog 日志只能用于归档。而 INNODB 是另一个公司以插件形式引入 MSQL 的，既然只依靠 binlog 是没有 crash-safe 能力的，所以 INNODB 使用另外一套日志系统一也就是 redo log 来实现 crash-safe 能力。
 
 **两种日志不同点？**
 
 1. redo log 是 INNODB 引擎特有的；binlog 是 MYSQL 的 Server 层实现的，所有引擎都可以使用
-
-2. redo log 是物理日志，记录的是“在某个数据页上做了什么修改”；binlog 是逻辑日志，记
-
-录的是这个语句的原始逻辑，比如“给 ID=2 这一行的 c 字段加 1
-
-3. redo log 是循环写的，空间固定会用完；binlog 是可以追加写入的。“追加写”是指 binlog
-
-文件写到一定大小后会切换到下并不会覆盖以前的日志
+2. redo log 是物理日志，记录的是“在某个数据页上做了什么修改”；binlog 是逻辑日志，记录的是这个语句的原始逻辑，比如“给 ID=2 这一行的 c 字段加 1
+3. redo log 是循环写的，空间固定会用完；binlog 是可以追加写入的。“追加写”是指 binlog文件写到一定大小后会切换到下并不会覆盖以前的日志
 
 **update语句的执行逻辑**
 
 1. 执行器先找引擎取 ID=2 这一行。ID 是主键，引擎直接用树搜索找到这一行。如果 ID=2这一行所在的数据页本来就在內存中，就直接返回给执行器；否则，需要先从磁盘读入内存，然后再返回。
-
 2. 执行器拿到引擎给的行数据，把这个值加上 1, 比如原来是 N，现在就是 N+1, 得到新的行数据，再调用引擎接口写入这行新数据。
-
 3. 引擎将这行新数据更新到内存中，同时将这个更新操作记录到 redo log 里面，此时 redo log 处于 prepare 状态。然后告知执行器执行完成了，随时可以提交事务 。
 4. 执行器生成这个操作的 binlog，并把 binlog 写入磁盘。
 5. 执行器调用引擎的提交事务接口，引擎把刚刚写入的 redo log 改成提交（commit）状态，更新完成。
@@ -80,7 +72,7 @@ MySQL 整体来看，其实就有两块：一块是 Server 层，它主要做的
 
 由于 redo log 和 binlog 是两个独立的逻辑，如果不用两阶段提交，要么就是先写完 redo log 再写 binlog，或者采用反过来的顺序。仍然用前面的 update 语句来做例子。假设当前 ID=2 的行，字段 c 的值是 0, 再假设执 update 语句过程中在写完第一个日志后，第二个日志还没有写完期间发生了 crash，会出现什么情况呢？
 
-1. **先写 redo log 后写 binlog。**假设在 redo log 写完，binlog 还没有写完的时候，MYSQL进程异常重启。由于我们前面说过的，redo log 写完之后，系统即使崩溃，仍然能够把数据恢复回来，所以恢复后这一行 c 的值是 1。但是由于 binlog 没写完就 crash 了，这时候 binlog 里面就没有记录这个语句。因此，之后备份日志的时候，存起来的 binlog 里面就没有这条语句。然后你会发现，如果需要用这个 binlog 来恢复临时库的话，由于这个语句的 binlog 丢失，这个临时库就会少了这一次更新，恢复出来的这一行 c 的值就是 0, 与原库的值不
+1. **先写 redo log 后写 binlog。**假设在 redo log 写完，binlog 还没有写完的时候，MYSQL进程异常重启。由于我们前面说过的，redo log 写完之后，系统即使崩溃，仍然能够把数据恢复回来，所以恢复后这一行 c 的值是 1。但是由于 binlog 没写完就 crash 了，这时候 binlog 里面就没有记录这个语句。因此，之后备份日志的时候，存起来的 binlog 里面就没有这条语句。然后你会发现，如果需要用这个 binlog 来恢复临时库的话，由于这个语句的 binlog 丢失，这个临时库就会少了这一次更新，恢复出来的这一行 c 的值就是 0
 
 2. **先写 binlog 后写 redo log。**如果在 binlog 写完之后 crash，由于 redo log 还没写，崩溃恢复以后这个事务无效，所以这一行 c 的值是 0。但是 binlog 里面已经记录了“把 c 从改成 1”这个日志。所以，在之后用 binlog 来恢复的时候就多了一个事务出来，恢复出来的这一行 c 的值就是 1, 与原库的值不同。
 
