--- a/rdb-mysql/3.事务隔离.md
+++ b/rdb-mysql/3.事务隔离.md
@@ -2,7 +2,7 @@
 
 ## 3.1.隔离性与级别
 
- ACID  (Atomicity、Consistency、Isolation、Durability，即原子性、-致性、隔离性、持久性），今天就来说说其中 I，也就是隔离性。
+ ACID  (Atomicity、Consistency、Isolation、Durability，即原子性、一致性、隔离性、持久性），今天就来说说其中 I，也就是隔离性。
 
 当数据库上有多个事务同时执行的时候，就可能出现脏读（dirty read）、不可重复读（non-repeatable read）、幻读（phantom read）的问题，为了解决这些问题，就有了“隔离级别”的概念。
 
