--- a/rdb-mysql/8.MySQL为什么会选错索引.md
+++ b/rdb-mysql/8.MySQL为什么会选错索引.md
@@ -250,4 +250,4 @@ where A in (a,b,c) AND B in (x,y,z)
 
 (A=a and B=x) or (A=a and B=y) or (A=a and B=z) or
 (A=b and B=x) or (A=b and B=y) or (A=b and B=z) or
-(A=c and B=x) or (A=c and B=y) or (A=c and B=z)
+(A=c and B=x) or (A=c and B=y) or (A=c and B=z)\
